--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- links to css -->
+    <link rel="stylesheet" href="styles/style.css">
     <title>Grid and Flexbox Basics</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>   
+            <h1>CSS Flexbox and Grid</h1>
+        </header>
+        <main>
+            <nav>
+                This is the nav
+                <article>
+                    This is an article
+                </article>
+            </nav>
+        </main>
+        <footer>
+            This is the footer
+        </footer>
+    </div>
 </body>
 </html>
